# volcanite

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Contributors.md  Dockerfile  README.md
lib/vvv/: CMakeLists.txt
lib/vvv-glfw-app/: CMakeLists.txt
lib/vvv-glfw-app/include/vvvwindow/: App.hpp  GLFWCameraController.hpp  GuiImgui.hpp
lib/vvv-glfw-app/include/vvvwindow/tf/: TransferFunction1DWidget.hpp  TransferFunctionSegmentedVolumeWidget.hpp
lib/vvv-glfw-app/src/: App.cpp  GLFWCameraController.cpp  GuiImgui.cpp  entrypoint.cpp
lib/vvv-glfw-app/src/tf/: TransferFunction1DWidget.cpp  TransferFunctionSegmentedVolumeWidget.cpp
lib/vvv/data/shader/: blending.glsl  blit.frag  blit.vert  debug_colormaps.glsl  fullscreen_triangle.vert  morton.glsl  pcg_hash.glsl  random.glsl  ray_box_intersection.glsl  util.glsl  white.frag
lib/vvv/data/shader/passes/: apply_ssao.comp  blur.comp  ssao.comp
lib/vvv/include/vvv/: config.hpp.in  headless_entrypoint.hpp  vvv.hpp
lib/vvv/include/vvv/core/: Buffer.hpp  Camera.hpp  DefaultGpuContext.hpp  GpuContext.hpp  GuiInterface.hpp  HeadlessRendering.hpp  MultiBuffering.hpp  Renderer.hpp  Shader.hpp  Synchronization.hpp  Texture.hpp  TimelineSemaphore.hpp  WindowingSystemIntegration.hpp  WithGpuContext.hpp  preamble.hpp  preamble_forward_decls.hpp
lib/vvv/include/vvv/passes/: PassBase.hpp  PassBlur.hpp  PassCompute.hpp  PassSimpleSsao.hpp  PassSsao.hpp  SinglePassGraphics.hpp
lib/vvv/include/vvv/reflection/: GraphicsPipelineReflection.hpp  TextureReflection.hpp  UniformReflection.hpp
lib/vvv/include/vvv/util/: Logger.hpp  Paths.hpp  color_space_converter.hpp  csv_utils.hpp  detect_debugger.hpp  hash_memory.hpp  random_gpu.hpp  space_filling_curves.hpp  util.hpp  vertex_primitives.hpp  volume_data_types.hpp
lib/vvv/include/vvv/vk/: debug_marker.hpp  destroy.hpp  format_utils.hpp  memory.hpp  queue.hpp  swapchain.hpp  version.hpp
lib/vvv/include/vvv/volren/: Volume.hpp
lib/vvv/include/vvv/volren/tf/: SegmentedVolumeMaterial.hpp  (+6 more)
lib/vvv/src/: headless_entrypoint.cpp  vvv.cpp
lib/vvv/src/core/: Buffer.cpp  Camera.cpp  DefaultGpuContext.cpp  GpuContext.cpp  GuiElementList.cpp  GuiInterface.cpp  HeadlessRendering.cpp  MultiBuffering.cpp  Shader.cpp  Synchronization.cpp  Texture.cpp  WithGpuContext.cpp  config.cpp
lib/vvv/src/passes/: PassBase.cpp  PassBlur.cpp  PassCompute.cpp  PassSimpleSsao.cpp  PassSsao.cpp  SinglePassGraphics.cpp
lib/vvv/src/reader/: hdf5.cpp  nrrd.cpp  tiff_ome.cpp  volcanite_raw.cpp  vti.cpp
lib/vvv/src/reflection/: GraphicsPipelineReflection.cpp  TextureReflection.cpp  UniformReflection.cpp
lib/vvv/src/util/: Logger.cpp  Paths.cpp  csv_utils.cpp  detect_debugger.cpp  random_gpu.cpp  util.cpp
lib/vvv/src/vk/: debug_marker.cpp  format_utils.cpp  memory.cpp  queue.cpp
lib/vvv/src/volren/: Volume.cpp
lib/vvv/src/volren/tf/: VectorTransferFunction.cpp
python/volcanite/: README.md  VolcaniteEval.md  pyproject.toml
python/volcanite/src/volcanite/: clouddata.py  converter.py  converter_chunked.py  volcaniteeval.py
python/volcanite/tests/: test_converter.py
test/: CMakeLists.txt  bitvector_test.cpp  csgv_gpu_test.cpp  csgv_test.cpp  volcanite_render_test.cpp  wavelet_matrix_test.cpp
volcanite/: CMakeLists.txt  ReadMe.md
volcanite/data/shader/cpp_glsl_include/: csgv_constants.incl
volcanite/data/shader/volcanite/: bit_vector.glsl
volcanite/data/shader/volcanite/benchmark/: bench_bindings.glsl  bench_decompress.comp  bench_decompress_subgroup_parallel.comp
volcanite/data/shader/volcanite/compression/: compressed_segmentation_volume.glsl  compression_utils.glsl  csgv_utils.glsl  rans.glsl
volcanite/data/shader/volcanite/renderer/: brdf_lambert.glsl  csgv_assign.comp  csgv_bindings.glsl  csgv_brick_viewer.comp  csgv_cacheclear.comp  csgv_debug.glsl  csgv_debug_resolve.glsl  csgv_decompress.comp  csgv_decompress_subgroup_parallel.comp  csgv_denoise_resolve.comp  csgv_materials.glsl  csgv_provision.comp  csgv_renderer.comp  csgv_renderer_dummy.comp  csgv_request.comp  csgv_resolve.comp  dummy_envmap.glsl  framebuffer.glsl
volcanite/data/vcfg/: ambient_occlusion.vcfg  global_shadows.vcfg  init.txt  local_shading.vcfg  path_tracing.vcfg
volcanite/include/volcanite/: CSGVPathUtils.hpp  StratifiedPixelSequence.hpp  VolcaniteArgs.hpp
volcanite/include/volcanite/compression/: CSGVChunkMerger.hpp  CSGVDatabase.hpp  CompSegVolHandler.hpp  CompressedSegmentationVolume.hpp  VolumeCompressionBase.hpp  memory_mapping.hpp  pack_nibble.hpp  pack_rans.hpp  pack_wavelet_matrix.hpp
volcanite/include/volcanite/compression/encoder/: CSGVBrickEncoder.hpp  CSGVSerialBrickEncoder.hpp  NibbleEncoder.hpp  RangeANSEncoder.hpp  WaveletMatrixEncoder.hpp
volcanite/include/volcanite/eval/: CSGVBenchmarkPass.hpp  EvaluationLogExport.hpp
volcanite/include/volcanite/renderer/: CompressedSegmentationVolumeBrickViewer.hpp  CompressedSegmentationVolumeRenderer.hpp  HelloVolumeRenderer.hpp  PassCompSegVolRender.hpp
volcanite/include/volcanite/util/: args_and_csgv_provider.hpp  segmentation_volume_synthesis.hpp
volcanite/package_assets/: LICENSE_THIRD_PARTY.txt
volcanite/package_assets/linux/: Volcanite.desktop.in  shortcut_postinst.in  shortcut_prerm.in
volcanite/package_assets/windows/: volcanite.rc
volcanite/python/: pixel_sequence_gen.py
volcanite/src/compression/: CSGVDatabase.cpp  CompressedSegmentationVolumeParallel.cpp  pack_wavelet_matrix.cpp
volcanite/src/compression/encoder/: CSGVBrickEncoder.cpp
volcanite/src/compression/wavelet_tree/: HuffmanWaveletMatrix.cpp  WaveletMatrix.cpp  prefix_counting.cpp
volcanite/src/eval/: EvaluationLogExport.cpp
volcanite/src/renderer/: CompressedSegmentationVolumeBrickViewer.cpp  CompressedSegmentationVolumeRenderer.cpp  PassCompSegVolRender.cpp
volcanite/src/util/: args_and_csgv_provider.cpp  segmentation_volume_synthesis.cpp
volcanite/src/volcanite/compression/: CSGVDatabase.cpp  CompressedSegmentationVolume.cpp  CompressedSegmentationVolumeStats.cpp  pack_nibble.cpp  pack_rans.cpp
volcanite/src/volcanite/eval/: CSGVBenchmarkPass.cpp
(+33 files in other folders)
